--- a/survey.html
+++ b/survey.html
@@ -60,12 +60,13 @@ Select which option best describes you
 
 
 <br>
-</body>
-<input type ="submit" value="Submit">
 
+
+<div class="button">
+<input type ="submit" value="Submit"></div>
 
 </div>
+</body>
 </form>
-
 </html>
 
